Revert "feat: j'ai rédigé le lisezmoi"
This reverts commit b9e3a95eaeccba3cec536db2c407229caeb81331.